[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiosmsactivate"]

[project]
name = "aiosmsactivate"
version = "1.0.0"
description = "Python asyncio wrapper for sms-activate.io API"
readme = "README.md"
authors = [{ name = "kewldan", email = "kewldanil1@gmail.com" }, { name = "lolkof", email = "kewldanil1@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sms", "api"]
requires-python = ">=3.10"
dependencies = [
    "aiohttp", "pydantic"
]

[project.urls]
Homepage = "https://github.com/AioSmsProviders/aiosmsactivate"